Vesperr-psd design

--- a/src/sass/about.scss
+++ b/src/sass/about.scss
@@ -1,6 +1,9 @@
 #about{
     padding: 60px 0;
     overflow: hidden;
+    @include media-breakpoint-down(md) {
+        padding: 30px 0;
+    }
     .content{
         .about-details{
             p{
