--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -13,11 +13,17 @@
 @import "index";
 @import "font-awesome";
 @import "about";
-@import "clients-logo.scss";
-@import "comman.scss";
+@import "clients-logo";
+@import "comman";
 @import "counts";
 @import "services";
 @import "features";
+@import "portfolio";
+@import "customers-are-saying";
+@import "team";
+@import "pricing";
+@import "faq";
+@import "footer";
 @import "datatable";
 @import "contact-us";
 
