--- a/src/sass/clients-logo.scss
+++ b/src/sass/clients-logo.scss
@@ -2,6 +2,9 @@
     background: #f3f9fd;
     padding: 10px 0;
     text-align: center;
+    @include media-breakpoint-down(md) {
+        margin: 30px 0;
+    }
     .col-lg-2{
         display: flex;
         align-items: center;
