--- a/src/sass/counts.scss
+++ b/src/sass/counts.scss
@@ -1,4 +1,14 @@
 #counts{
+    padding: 0 0 60px;
+    overflow: hidden;
+    @include media-breakpoint-down(md) {
+        padding: 30px 0;
+    }
+    @media (max-width: 1024px){
+        .image img {
+            max-width: 70%;
+        }
+    }
     .content{
         .count-box {
             padding: 20px 0;
