--- a/src/sass/features.scss
+++ b/src/sass/features.scss
@@ -1,4 +1,9 @@
 #features{
+    padding: 60px 0;
+    overflow: hidden;
+    @include media-breakpoint-down(md) {
+        padding: 30px 0;
+    }
     .icon-box {
         display: flex;
         align-items: center;
