--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,9 +1,12 @@
 #lms-page-index {
     width: 100%;
-    height: 70vh;
-    margin-top: 70px;
+    // height: 70vh;
+    margin: 70px 0;
     padding: 60px 0;
     overflow: hidden;
+    @include media-breakpoint-down(md) {
+        padding: 30px 0;
+    }
     .hero-details{
         display: flex;
         flex-direction: column;
@@ -12,10 +15,18 @@
         .hd-title{
             h1{
                 margin: 0 0 10px 0;
-                font-size: 48px;
+                font-size: 44px;
                 font-weight: 700;
-                line-height: 56px;
                 color: $black;
+                @include media-breakpoint-down(md){
+                    font-size: 40px;
+                }
+                @include media-breakpoint-down(sm){
+                    font-size: 32px;
+                }
+                @include media-breakpoint-down(xs){
+                    font-size: 20px;
+                }
             }
             h2{
                 color: #484848;
@@ -23,17 +34,29 @@
                 font-size: 24px;
                 font-weight: 600;
                 line-height: 1.2;
+                @include media-breakpoint-down(sm){
+                    font-size: 18px;
+                }
+                @include media-breakpoint-down(xs){
+                    font-size: 14px;
+                }
             }
         }
     }
     .hero-img{
+        @include media-breakpoint-down(md){
+            text-align: center;
+            img{
+                width: 50%;
+            }
+        }
         img{
             max-width: 100%;
             height: auto;
+            
         }
     }
 }
-
 @keyframes fadeInUp {
     0% {
         opacity: 0;
